# DevOps-Course-Exercise-2

./: .env.template  .gitignore  .tfvars.template  .travis.yml  Dockerfile  README.md  app.py  deploy.sh  docker-compose.yml  main.tf  outputs.tf  pyproject.toml  run-dev.sh  terraform.tfvars  test_env_file.test  variables.tf
db_client/: index.py  queries.py
decorators/: require_write_privilege.py
e2e_tests/: end_to_end_test.py
entity/: http_method.py  item.py  status.py  user.py  user_role.py
helpers/: index.py
integration_tests/: test_app.py
kubernetes/: deployment.yaml  service.yaml
scripts/: configure-tf-state-storage.sh  deploy.sh
templates/: index.html
test/helpers/: index_test.py
test/views/: view_model_test.py
views/: view_model.py
